# ClearOutsideAPY

./: .gitignore  CHANGELOG.md  README.md  day.json  main.py  pyproject.toml
backend/: cli.py  read_config.py  to_json.py  webscraper.py
example/: example-result.json
frontend/: settings.py
src/: clear_outside_apy.py
src/clear_outside_apy.egg-info/: PKG-INFO  SOURCES.txt
